src/compiler/z42.Tests/Fixtures/errors/generic_struct_violation/source.z42
namespace Demo;

class Foo { }

void F<T>(T x) where T: struct { }

void Main() {
    F(new Foo());
}
